[package]
name = "example-rust-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.1", features = ["rt", "rt-multi-thread", "macros"] }
openapi = { git = "https://github.com/entrywan/api-rust.git", version = "1.0.2" }
